--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "next",
-    "build": "next build",
-    "export": "next build && next export"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "http://AndChurchville.github.io/CoronaCaseUpdate",
   "author": "",
   "license": "ISC",
   "dependencies": {
