--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
 base = "corona-update/"
-publish = "corona-update/build/"
-command = "run deploy"
+publish = "corona-update/index.js/"
+command = "yarn build"
